--- a/src/components/BrainhubWorker/SetNewRoleForm/style.css
+++ b/src/components/BrainhubWorker/SetNewRoleForm/style.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   padding: 20px; }
 
+.new-role-form > fieldset {
+  border: none; }
+
 .new-role-input {
   width: 200px;
   height: 30px;
